--- a/default.css
+++ b/default.css
@@ -12,6 +12,7 @@ body {
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 .metamorphous {
@@ -27,12 +28,30 @@ a {
   align-items: center;
 }
 
-.content {
+.col {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  flex-shrink: 0;
+  flex-grow: 0;
   width: 55vw;
+  margin: 0px 45px;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.136);
-  margin: 0px 45px;
+  padding: 10px;
+}
+
+.bottommargin {
+  margin-bottom: 50px;
 }
 
 .button {
@@ -102,6 +121,13 @@ a {
   display: none;
 }
 
+.wiggle {
+  animation-name: wiggle;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
 @keyframes wiggle {
   0% {
     transform: translateY(0px);
@@ -119,6 +145,7 @@ a {
   }
 }
 
+/** responsive ui **/
 @media (max-width: 768px) {
   .content {
     width: 85vw;
@@ -129,10 +156,7 @@ a {
   body {
     display: flex;
     flex-direction: column;
-    font-size: x-small;
-  }
-  .about {
-    width: 100vw;
+    font-size: small;
   }
 
   .relative {
@@ -149,5 +173,9 @@ a {
 
   #welcome {
     display: none;
+  }
+
+  #mainwrapper {
+    margin: 0px;
   }
 }
