--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
   justify-content: center;
 }
 
-#socials {
-}
-
 .sidebar {
   padding-top: 15px;
   display: flex;
@@ -37,11 +34,6 @@
   color: black;
 }
 
-#contentMain {
-  flex-direction: row;
-  justify-content: space-around;
-}
-
 @media (max-width: 1024px) {
   #cheeseBox {
     left: 10;
@@ -50,5 +42,11 @@
 @media (max-width: 768px) {
   .sidebar {
     display: none;
+  }
+}
+
+@media (max-width: 425px) {
+  .about {
+    width: 100vw;
   }
 }
