--- a/default.css
+++ b/default.css
@@ -123,25 +123,19 @@ section {
 
 .wiggle {
   animation-name: wiggle;
-  animation-duration: 3s;
+  animation-duration: 1.5s;
   animation-timing-function: ease-in-out;
+  animation-direction: alternate;
   animation-iteration-count: infinite;
 }
 
 @keyframes wiggle {
   0% {
-    transform: translateY(0px);
-    transform: rotate(0px);
-  }
-
-  50% {
-    transform: translateY(8px);
-    transform: rotate(15px);
+    transform: translateY(-8px);
   }
 
   100% {
-    transform: translateY(0px);
-    transform: rotate(0px);
+    transform: translateY(8px);
   }
 }
 
